<resources>
    <string name="app_name">UtibuHealth</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="title_activity_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">My Orders</string>
    <string name="title_notifications">Statements</string>
    <string name="title_profile">Profile</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="transactions">Transactions</string>
    <string name="select_medication">Select Medication</string>
    <string name="enter_quantity">Enter Quantity</string>
    <string name="pickup_option">Pickup</string>
    <string name="delivery_option">Delivery</string>
    <string name="submit_order">Submit Order</string>
    <string-array name="medication_items">
        <item>Medication 1</item>
        <item>Medication 2</item>
        <item>Medication 3</item>
    </string-array>

</resources>